fix(simulator): flatten value write paths to match new scalar CID model
- IonSimServer: update all applyProfile() refs from deep struct paths
  (e.g. PhV.phsA.cVal.mag.f) to flat DA names (e.g. PhV.phsA / TotW.mag)
  matching the now-scalar WYE_t/MV_t/SEQ_t DOTypes in the CID.
  Removes setValuesWarnedOnce flag (already unused).
- SimulatorLauncher: fix .toList() → .collect(Collectors.toList()) for
  Java 11 compatibility.
- Update simulator submodule to ff9e1c1 (flat CID).

Fixes bdaMirror=null NPE in iec61850bean URCB: URCBs can now send
reports to IEDNavigator clients.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>